	* View Chat log available from the interface (Daniel Atallah)
	* Ability to receive offline messages in character encodings
	  other than ASCII (thanks to Nick Sukharev)
	* File transfer status messages printed to conversation
	  windows (Dave West)
	* Display file transfer messages when someone sends you a file
	  over AIM (Dave West)

	Bug Fixes:
	* Work around window manager stupidity with new dialog windows (Dave West)
	* Compile with gtk 2.5.x (Gary Kramlich)
	* Escape invalid characters in log names (Daniel Atallah)
	* Fix for clicking add in an msn chat with 2 or more people in your buddy
	  list (Daniel Atallah)

version 0.82.1 (08/27/2004):
	Bug Fixes:
	* Fix a crash when changing the preference for how to display buttons
	  on conversation windows
	* Remove a stray printf() when beginning new conversations and logging
	  is enabled

version 0.82 (08/26/2004):
	New Features:
	* Ability to set available messages for AIM
	  (Tools->Account Actions->Set Available Message...)
	* Ability to specify a custom character set for messages sent to ICQ
	  users and messages received from ICQ users
	* Ability to edit your current away message (Rhett Robinson)
	* Topics in the conversation window (not the topic field at the
	  top) with URLs will now appear as links (Stu Tomlinson)
	* File transfers appear in the file transfer window when they
	  are initiated rather than when they begin transferring (Dave West)
	* Instead of toggling slash commands on/off, you can now toggle
	  passing through unknown slash commands on/off.

	Bug Fixes:
	* Joining a Jabber chat no longer causes a crash (Stu Tomlinson)
	* Selecting a buddy icon for a brand new account no longer
	  causes a crash
	* Better file transfer error messages (Dave West)
	* Remotely canceled file transfers in MSN are now noticed, so that we
	  don't accidentally cancel the file transfer and crash Gaim
	  (Felipe Contreras)
	* Protocols that don't support joining chat rooms by name no longer